--- a/news/assets/css/index.css
+++ b/news/assets/css/index.css
@@ -4,12 +4,14 @@ body {
   padding: 0;
   background-color: #f4f4f4;
 }
+
 header {
-  background: #333333;
-  color: #fff;
+  background: #ffffff;
+  color: #000000;
   padding: 15px;
   text-align: center;
 }
+
 nav ul {
   list-style: none;
   padding: 0;
@@ -18,29 +20,95 @@ nav ul {
   background: #444;
   margin: 0;
 }
+
 nav ul li {
   margin: 0 15px;
 }
+
 nav ul li a {
   color: #fff;
   text-decoration: none;
   padding: 10px;
   display: block;
 }
+
 main {
   max-width: 90%;
   margin: 20px auto;
   padding: 20px;
   background: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
+/* Khung Tin Nổi Bật */
+.featured {
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 8px;
+  width: 100%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  gap: 20px;
+}
+.featured2 {
+  margin-bottom: 20px;
+  padding: 15px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  flex: 5;
+  min-width: 300px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.featured3 {
+  margin-bottom: 20px;
+  background-color: #ffffff;
+  flex: 5;
+  min-width: 300px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 15px;
+}
+/* Chỉnh kích thước hình ảnh */
 .featured img {
-  width: 600px;
-  height: 350px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
-.latest-news article {
-  border-bottom: 1px solid #ddd;
-  padding: 10px 0;
+.news-section{
+  display: flex;
+}
+/* Chia thành 2 cột */
+.news-section2 {
+  display: flex;
+  gap: 20px;
+}
+.news-section3{
+  display: flex;
+  gap: 20px;
+}
+/* Khung Tin Tức Bình Thường */
+.latest-news {
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 8px;
+  flex: 5;
+  min-width: 300px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.category-news{
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 8px;
+  flex: 5 ;
+  min-width: 300px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+.top-news{
+  margin-top: 20px;
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 8px;
+  width: 100%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 footer {
   text-align: center;
@@ -49,3 +117,5 @@ footer {
   color: #fff;
   margin-top: 20px;
 }
+
+
