--- a/news/assets/css/index.css
+++ b/news/assets/css/index.css
@@ -68,11 +68,18 @@ main {
   padding: 15px;
 }
 /* Chỉnh kích thước hình ảnh */
-.featured img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 8px;
+.category-news img,
+.latest-news img,
+.category-news img,
+.featured img,
+.featured2 img,
+.featured3 img {
+    width: 100%;
+    height: auto; 
+    border-radius: 8px;
+    object-fit: cover; 
 }
+
 .news-section{
   display: flex;
 }
@@ -117,5 +124,9 @@ footer {
   color: #fff;
   margin-top: 20px;
 }
-
+@media (max-width: 768px) {
+  .news-section, .news-section2, .news-section3 {
+      flex-direction: column;
+  }
+}
 
