--- a/news/assets/css/index.css
+++ b/news/assets/css/index.css
@@ -1,8 +1,10 @@
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   background-color: #f4f4f4;
+  max-width: 1250px;
+  min-width: 700px;
 }
 
 header {
@@ -33,31 +35,31 @@ nav ul li a {
 }
 
 main {
-  max-width: 90%;
+  max-width: 95%;
   margin: 20px auto;
   padding: 20px;
   background: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+
 }
 .header-container {
   display: flex;
   align-items: center;
   padding: 10px 20px;
-  margin: 0 312px;
-  justify-content: center;
   white-space: nowrap;
 }
 
 .header-container h1 {
-  margin: 0; /* Loại bỏ margin mặc định */
+  margin: 0;
   display: flex;
   align-items: center;
 }
 
-.header-container h1 a img {
+.logo {
+  float: left;
   cursor: pointer;
   transition: opacity 0.3s;
+  margin-left: 50px;
 }
 
 .header-container h1 a img:hover {
@@ -80,7 +82,9 @@ main {
 .icons {
   display: flex;
   gap: 15px;
-  margin-left: auto; /* Đẩy icon sang phải */
+  margin-left: auto;
+  justify-content: right;
+  margin-right: 20px;
 }
 
 .icons i {
@@ -92,6 +96,7 @@ main {
 .icons i:hover {
   color: #007bff;
 }
+
 .notification-container {
   position: relative;
   display: inline-block;
@@ -160,28 +165,30 @@ main {
 
 /* Khung Tin Nổi Bật */
 .featured {
+  display: flex;
   background-color: #ffffff;
   padding: 15px;
   border-radius: 8px;
   width: 100%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   gap: 20px;
+  margin: 10px;
 }
 .featured2 {
-  margin-bottom: 20px;
+  margin: 10px;
   padding: 15px;
   border-radius: 8px;
   background-color: #ffffff;
   flex: 5;
   min-width: 300px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .featured3 {
-  margin-bottom: 20px;
+  margin: 10px;
   background-color: #ffffff;
   flex: 5;
   min-width: 300px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
   padding: 15px;
 }
@@ -189,13 +196,20 @@ main {
 .category-news img,
 .latest-news img,
 .category-news img,
-.featured img,
 .featured2 img,
 .featured3 img {
     width: 100%;
     height: auto; 
     border-radius: 8px;
     object-fit: cover; 
+}
+
+.featured img {
+  float: left;
+  width: 50%;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 8px;
 }
 .news-section{
   display: flex;
@@ -204,11 +218,42 @@ main {
 .news-section2 {
   display: flex;
   gap: 20px;
+  margin: 20px 10px 10px 10px;
 }
 .news-section3 {
   display: flex;
   gap: 20px;
+  margin: 10px;
 }
+
+/* thu giãn màn hình */
+@media screen and (max-width: 750px) {
+  .news-section2,
+  .news-section3 {
+    flex-direction: column;
+    width: 95%; 
+  }
+
+  .news-section {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .featured,
+  .featured2,
+  .featured3 {
+    width: 95% !important;
+    margin: 10px auto;
+  }
+
+  .top-news {
+    width: 95%; 
+    margin: 0 10px 0 0;
+    padding: 10px;
+    box-sizing: border-box;
+  }
+}
+
 /* Khung Tin Tức Bình Thường */
 .latest-news {
   background-color: #ffffff;
@@ -216,7 +261,7 @@ main {
   border-radius: 8px;
   flex: 5;
   min-width: 300px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .category-news {
   background-color: #ffffff;
@@ -224,7 +269,7 @@ main {
   border-radius: 8px;
   flex: 5;
   min-width: 300px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 .top-news {
   margin-top: 20px;
@@ -232,15 +277,9 @@ main {
   padding: 15px;
   border-radius: 8px;
   width: 100%;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-footer {
-  text-align: center;
-  padding: 15px;
-  background: #333;
-  color: #fff;
-  margin-top: 20px;
+.news-hr {
+  margin: 20px;
 }
-
-
