--- a/news/assets/css/header.css
+++ b/news/assets/css/header.css
@@ -28,11 +28,12 @@
   margin: 0 8px; /* Giảm khoảng cách giữa hình và đường gạch */
 }
 
-#datetime {
+#datetime,
+#weather {
   font-size: 16px;
-  font-weight: bold;
-  color: #333;
-  margin-left: 5px; /* Đưa ngày tháng sát vào đường gạch */
+  font-family: Arial, sans-serif;
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .icons {
