--- a/news/assets/css/articleDetails.css
+++ b/news/assets/css/articleDetails.css
@@ -1,6 +1,6 @@
 .article-detail {
-    max-width: 900px;
-    margin: 50px auto;
+    max-width: 90%;
+    margin: 20px auto;
     padding: 30px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -64,22 +64,6 @@
     text-decoration: underline;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-    margin-top: 50px;
-}
-
-footer a {
-    color: #fff;
-    text-decoration: none;
-}
-
-footer a:hover {
-    text-decoration: underline;
-}
 /* Hover effect for article title */
 .article-title:hover {
     color: #007bff;
@@ -143,7 +127,7 @@ footer a:hover {
 
 #submit-comment {
     padding: 12px 20px;
-    background-color: #007bff;
+    background-color: #3c3c3c;
     color: white;
     border: none;
     border-radius: 8px;
