--- a/news/assets/css/header.css
+++ b/news/assets/css/header.css
@@ -171,3 +171,11 @@ nav ul li a {
 .show {
   display: block;
 }
+
+.logout {
+  margin-left: auto;
+  margin-right: 20px;
+  color: rgb(0, 0, 0); 
+  text-decoration: none;
+  font-size: 16px;
+}
