--- a/news/assets/css/dashboard.css
+++ b/news/assets/css/dashboard.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial;
-  background: #f8f9f9;
-  padding: 20px;
-}
-
 .stat-box {
   background: #e8f0fe;
   padding: 30px;
@@ -11,7 +5,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 300px;
   text-align: center;
-  margin: auto;
+  margin: 50px auto;
 }
 
 .stat-box h3 {
