--- a/news/assets/css/notification.css
+++ b/news/assets/css/notification.css
@@ -14,7 +14,7 @@
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   padding: 10px;
-  z-index: 1000;
+  z-index: 1005 !important;
 }
 
 .notification-dropdown h4 {
