--- a/news/assets/css/index.css
+++ b/news/assets/css/index.css
@@ -144,6 +144,7 @@ main {
   height: 100px;
   border-radius: 5px;
   margin-right: 10px;
+  object-fit: cover;
 }
 
 .category-news img {
@@ -152,6 +153,7 @@ main {
   height: 130px;
   border-radius: 5px;
   margin-bottom: 10px;
+  object-fit: cover;
 }
 
 /* format từng bài báo */
