--- a/news/assets/css/addArticle.css
+++ b/news/assets/css/addArticle.css
@@ -44,7 +44,7 @@
     height: 100px;
 }
 
-button{
+.button{
     padding: 10px;
     background: #444;
     color: #fff;
@@ -56,7 +56,7 @@ button{
     margin-left: 250px;
 }
 
-button:hover{
+.button:hover{
     background: #303030;
 }
 
