--- a/news/assets/css/articleDetails.css
+++ b/news/assets/css/articleDetails.css
@@ -88,6 +88,7 @@
     border-radius: 8px;
     margin-bottom: 20px;
 }
+
 /* Phần bình luận */
 .comment {
     clear: both;
@@ -109,7 +110,8 @@
     margin-bottom: 20px;
 }
 
-.comment-box input, .comment-box textarea {
+.comment-box input,
+.comment-box textarea {
     width: 100%;
     padding: 12px;
     margin-bottom: 10px;
@@ -120,7 +122,8 @@
     box-sizing: border-box;
 }
 
-.comment-box input:focus, .comment-box textarea:focus {
+.comment-box input:focus,
+.comment-box textarea:focus {
     border-color: #007bff;
     outline: none;
 }
@@ -162,4 +165,3 @@
     color: #333;
     margin-bottom: 5px;
 }
-
