--- a/news/assets/css/header.css
+++ b/news/assets/css/header.css
@@ -5,25 +5,34 @@ header {
   text-align: center;
 }
 
-nav ul {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  justify-content: center;
+#menu {
+  overflow-x: auto;
+  white-space: nowrap;
   background: #444;
-  margin: 0;
 }
 
-nav ul li {
+#menu ul {
+  display: flex;
+  align-items: center;
+  justify-content: center ;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  min-width: 100%;
+}
+
+#menu ul li {
   margin: 0 15px;
 }
 
-nav ul li a {
+#menu ul li a {
   color: #fff;
   text-decoration: none;
   padding: 10px;
   display: block;
+  white-space: nowrap;
 }
+
 
 .header-container {
   display: flex;
