--- a/news/assets/css/header.css
+++ b/news/assets/css/header.css
@@ -14,7 +14,9 @@ header {
 #menu ul {
   display: flex;
   align-items: center;
-  justify-content: center ;
+  /* -------------- */
+  justify-content: center ; 
+  /* -------------------- */
   list-style: none;
   padding: 0;
   margin: 0;
@@ -33,6 +35,9 @@ header {
   white-space: nowrap;
 }
 
+#menu ul li a:last-child {
+  margin-right: 20px;
+}
 
 .header-container {
   display: flex;
