--- a/news/assets/css/articleDetails.css
+++ b/news/assets/css/articleDetails.css
@@ -50,6 +50,11 @@
     margin-bottom: 20px;
 }
 
+.eye {
+    float: right; 
+    margin-right: 10px
+}
+
 .related-articles ul {
     list-style: none;
     padding: 0;
