--- a/news/assets/css/flexibleLayout.css
+++ b/news/assets/css/flexibleLayout.css
@@ -80,6 +80,7 @@
 
   .search-input {
     width: 100px;
+    font-size: 30px;
   }
 
   #weather {
@@ -97,11 +98,12 @@
   }
 
   article p {
-    
+    font-size: 30px !important;
     order: 2;
   }
 
   .doctiep {
+      font-size: 20px;
       order: 3;
       margin-bottom: 5px;
       margin-top: -10px;;
@@ -133,4 +135,62 @@
     background-color: #f4f2f2;
     padding: 10px;
   }
+
+  #menu ul {
+    display: flex;
+    justify-content: left ; 
+  }
+  #menu ul li a {
+    font-size: 30px;
+  }
+
+  #datetime, .separator {
+    display: none ;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+  }
+
+  .search-form {
+    width: 300px;
+  }
+
+  .eye {
+    float: none;
+    display: block;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+
+  .date {
+    display: block;
+  }
+  .most-viewed-item a {
+    font-size: 25px;
+    margin-right: 5px;
+  }
+
+  .most-viewed-item span:first-child {
+    font-size: 30px;
+  }
+
+  h2 {
+    text-align: center;
+    padding: 5px;
+    background-color: #f4f2f2;
+  }
+
+  .article-title {
+    text-align: left;
+    background: none;
+  }
+
+  .home {
+    position: Absolute;
+    left: 20px;
+    margin-top: -15px;
+  }
+
 }
