--- a/news/assets/css/index.css
+++ b/news/assets/css/index.css
@@ -1,3 +1,8 @@
+html {
+  scrollbar-color: #888 #eee; /* màu thanh kéo + màu nền thanh */
+  scrollbar-width: thin;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   margin: 0 auto;
